# cybersec-container-homelab

./: .gitignore  GEMINI.md  README.md  cyberlab.py  docker-compose.yml  lab_manager.py  pyproject.toml  requirements.txt  review.md  setup_host.sh  validation.sh
.devcontainer/: devcontainer.json  docker-compose.devcontainer.yml
.gemini/: GEMINI.md  settings.json
.gemini/hooks/: log_activity.py  log_activity.sh
.github/hooks/: copilot-tool-audit.json  log_tool_activity-working.js  log_tool_activity.js  log_tool_activity.sh
.github/workflows/: ci.yml
.planning/: implementation_status.md  plan.md
.planning/.prompts/: prompts.md
.planning/_backups/: plan_phased.md
attacker-node/: Dockerfile
configs/: .env.example  iptables_rules.yml
configs/presets/: 01_kali_msf2_wazuh.yml  02_kali_msf2_splunk.yml  03_kali_ubuntu_wazuh.yml  04_kali_ubuntu_splunk.yml  05_atomicred_msf2_wazuh.yml  06_atomicred_msf2_splunk.yml  07_atomicred_ubuntu_wazuh.yml  08_atomicred_ubuntu_splunk.yml  09_all.yml
firewall/: Dockerfile  firewall-rules.sh  rsyslog.conf
pi-hole/: 99-logging.conf
presets/: 02_kali_msf2_splunk.yml  08_atomicred_ubuntu_splunk.yml  09_all.yml
scripts/: setup_host.sh  validation.sh
services/attacker-node/: Dockerfile
services/firewall/: Dockerfile  firewall-rules.sh  rsyslog.conf  ulogd.conf
services/pi-hole/: 99-logging.conf  Dockerfile  rsyslog.conf
services/siem/: Dockerfile
siem/: Dockerfile
splunk/: Dockerfile  inputs.conf
src/cyberlab/: __init__.py  (+1 more)
tests/: test_attack_logging.sh  test_lab_manager.py
vulnerable-target/: syslog.conf
(+12 files in other folders)
