[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cyberlab"
version = "0.1.0"
description = "Cyber Homelab Management CLI"
authors = [
    {name = "Cyber Homelab"}
]
dependencies = [
    "pyyaml",
    "questionary"
]

[project.scripts]
cyberlab = "cyberlab.cli:main"
